# C__Learn

./: 3-10.cpp  CMakeLists.txt  P1018.cpp  RollDice.cpp  findrepeatnum.cpp  main.cpp  tesr.c  transformer.cpp  type.cpp
3.15/: P1019.cpp  P1020.cpp  P2021.cpp  P2022.cpp  P2023.cpp
3.16/: P1026.cpp  P1028.cpp
3.17/: P1029.cpp  P1030.cpp  P1031.cpp  P1032.cpp  P1033.cpp
3.18/: P1035.cpp  P1036.cpp  P1037.cpp
4.22/: test.cpp
First Try/: 3-8.cpp  3-9.cpp  P1013.c  P1013.cpp  PalindromeNumber.cpp  PiecewiseFunction.cpp  caculatePAI.cpp  ncifang.cpp  sum.cpp  test.cpp  transformer.cpp
