cmake_minimum_required(VERSION 3.17)
project(C__Learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Learn main.cpp main.cpp)
add_executable(test test.cpp)
add_executable(sum sum.cpp)
add_executable(findrepeatnum findrepeatnum.cpp)
add_executable(ncifang ncifang.cpp)
add_executable(caculatePAI caculatePAI.cpp)
add_executable(PalindromeNumber PalindromeNumber.cpp)
add_executable(PiecewiseFunction PiecewiseFunction.cpp)
add_executable(RollDice RollDice.cpp)
add_executable(3-8 3-8.cpp)
add_executable(3-9 3-9.cpp)
add_executable(3-10 3-10.cpp)
add_executable(transformer transformer.cpp)
add_executable(type type.cpp)
add_executable(tesr tesr.c)