cmake_minimum_required(VERSION 3.17)
project(C__Learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Learn "First Try/main.cpp" "First Try/main.cpp")
add_executable(test "First Try/test.cpp")
add_executable(sum "First Try/sum.cpp")
add_executable(findrepeatnum "First Try/findrepeatnum.cpp")
add_executable(ncifang "First Try/ncifang.cpp")
add_executable(caculatePAI "First Try/caculatePAI.cpp")
add_executable(PalindromeNumber "First Try/PalindromeNumber.cpp")
add_executable(PiecewiseFunction "First Try/PiecewiseFunction.cpp")
add_executable(RollDice "First Try/RollDice.cpp")
add_executable(3-8 "First Try/3-8.cpp")
add_executable(3-9 "First Try/3-9.cpp")
add_executable(3-10 "First Try/3-10.cpp")
add_executable(transformer "First Try/transformer.cpp")
add_executable(type "First Try/type.cpp")
add_executable(tesr "First Try/tesr.c")
add_executable(leetcode P1018.cpp)
add_executable(P1019 P1019.cpp)
add_executable(P1020 P1020.cpp)