cmake_minimum_required(VERSION 3.17)
project(C__Learn)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Learn "First Try/main.cpp" "First Try/main.cpp")
add_executable(test "First Try/test.cpp")
add_executable(sum "First Try/sum.cpp")
add_executable(findrepeatnum "First Try/findrepeatnum.cpp")
add_executable(ncifang "First Try/ncifang.cpp")
add_executable(caculatePAI "First Try/caculatePAI.cpp")
add_executable(PalindromeNumber "First Try/PalindromeNumber.cpp")
add_executable(PiecewiseFunction "First Try/PiecewiseFunction.cpp")
add_executable(RollDice "First Try/RollDice.cpp")
add_executable(3-8 "First Try/3-8.cpp")
add_executable(3-9 "First Try/3-9.cpp")
add_executable(3-10 "First Try/3-10.cpp")
add_executable(transformer "First Try/transformer.cpp")
add_executable(type "First Try/type.cpp")
add_executable(tesr "First Try/tesr.c")
add_executable(leetcode 3.15/P1018.cpp)
add_executable(P1019 3.15/P1019.cpp)
add_executable(P1020 3.15/P1020.cpp)
add_executable(P2021 3.15/P2021.cpp)
add_executable(P2022 3.15/P2022.cpp)
add_executable(P2023 3.15/P2023.cpp)
add_executable(P1013 "First Try/P1013.c")
add_executable(P1026 3.16/P1026.cpp)
add_executable(P1028 3.16/P1028.cpp)
add_executable(P1029 3.17/P1029.cpp)
add_executable(P1030 3.17/P1030.cpp)
add_executable(P1031 3.17/P1031.cpp)

add_executable(P1032 3.17/P1032.cpp)
add_executable(P1033 3.17/P1033.cpp)
add_executable(P1035 3.18/P1035.cpp)
add_executable(P1036 3.18/P1036.cpp)
add_executable(P1037 3.18/P1037.cpp)